variables, hero and marquee tablet view

--- a/Assets/css/pages/index/partials/header.css
+++ b/Assets/css/pages/index/partials/header.css
@@ -58,7 +58,17 @@ a.btn:hover {
 }
 
 /*HEADER TABLET*/
+@media screen and (max-width:768px) {
+    header {
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+    }
 
+    nav {
+        display: none;
+    }
+}
 
 
 /*HEADER MOBILE*/
