--- a/Assets/css/global/global.css
+++ b/Assets/css/global/global.css
@@ -1,3 +1,6 @@
+/*Imports*/
+@import url(/Assets/css/global/variables.css);
+
 /*- Globals-*/
 
 @font-face {
@@ -11,25 +14,6 @@
     box-sizing: border-box;
 }
 
-:root {
-    /*colors*/
-    --bg: #19181b;
-    --bg-secodary: #313131;
-    --text-light: #f8f5ff;
-    --text-gray: #afacb9;
-    --btn-primary: #6f44ff;
-    --btn-secondary: #44d2ff;
-    --stroke: #afacb94b;
-
-    /*font*/
-    --font-prymary: "Poppins", "sans-serif";
-    --font-secondary: "KUBO";
-
-    /*Spacing*/
-    --container-desktop: 100px;
-    --container-mobile: 28px;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -38,6 +22,28 @@ body {
     background-color: var(--bg);
     color: var(--text-gray);
     font-family: var(--font-prymary);
+}
+
+h1 {
+    font-size: var(--text-lg);
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: var(--text-md);
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+h3 {
+    font-size: var(--text-sm);
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+p {
+    font-size: var(--p);
 }
 
 @keyframes appear {
@@ -56,5 +62,12 @@ section {
     animation: appear ease-in-out;
     animation-timeline: view();
     animation-range: entry 0% cover 50%;
+}
+
+@media screen and (max-width: 768px) {
+    section {
+        flex-direction: column;
+        padding: 0  var(--container-mobile);
+    }
 }
 
