--- a/Assets/css/pages/index/partials/marquee.css
+++ b/Assets/css/pages/index/partials/marquee.css
@@ -13,7 +13,7 @@
 }
 
 .text-wrapper h3 {
-    font-size: var(--text-xl);
+    font-size: var(--text-lg);
     font-family: var(--font-secondary);
     text-transform: uppercase;
     color: var(--text-gray);
@@ -51,10 +51,22 @@
     }
 }
 
+@media (max-width: 1440px) {
+    .marquee {
+        padding: 0 var(--container-tablet);
+    }
+
+    .text-wrapper img {
+        max-width: 120px;
+        border-radius: 100px;
+        padding: 2.6rem;
+    }
+}
+
 /*Marquee TABLET*/
 @media screen and (max-width: 768px) {
     .marquee {
-        padding: 0 var(--container-mobile);
+        padding: 0 var(--container-tablet);
     }
 
     .text-wrapper img {
@@ -69,3 +81,19 @@
 }
 
 /*Marquee MOBILE*/
+@media screen and (max-width: 480px) {
+    .marquee {
+        padding: 0 var(--container-mobile);
+    }
+
+    .text-wrapper img {
+        max-width: 70px;
+        border-radius: 70px;
+    
+        white-space: nowrap;
+        padding: 1.3rem;
+        
+        animation: move-itl 2s linear infinite;
+    }
+
+}
