--- a/Assets/css/global/global.css
+++ b/Assets/css/global/global.css
@@ -58,16 +58,70 @@ p {
 section {
     display: flex;
     padding: 0 var(--container-desktop);
+}
 
-    animation: appear ease-in-out;
-    animation-timeline: view();
-    animation-range: entry 0% cover 50%;
+
+.col {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    flex-direction: column;
+    border-left: .1px solid var(--stroke);
+    border-right: .1px solid var(--stroke);
+
+    height: 100vh;
+
+}
+
+.headline {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    flex-direction: column;
+    padding: 140px 40px 40px 40px;
+    gap: 20px;
+}
+
+@media screen and (max-width:1440px) {
+    section {
+        padding: 0 var(--container-tablet);
+    }
+}
+
+@media screen and (min-width: 769px) {
+    section { 
+        animation: appear ease-in-out;
+        animation-timeline: view();
+        animation-range: entry 0% cover 50%;
+    }
 }
 
 @media screen and (max-width: 768px) {
     section {
         flex-direction: column;
-        padding: 0  var(--container-mobile);
+        padding: 0  var(--container-tablet);
+    }
+
+    section .col:nth-child(2) {
+        display: none;
+    }
+
+    section .col {
+        height: 100%;
+        position: inherit;
+    }
+
+    .headline {
+        padding: 80px 20px;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    section {
+        padding: 0 var(--container-mobile);
     }
 }
 
