--- a/Assets/css/pages/index/partials/acesso.css
+++ b/Assets/css/pages/index/partials/acesso.css
@@ -29,7 +29,7 @@ section.acesso {
 }
 
 .card h4 {
-    font-size: 24px;
+    font-size: var(--text-btn);
     font-weight: 400;
     max-width: 60%;
     cursor: default;
@@ -108,7 +108,73 @@ section.acesso {
 
 
 /*ACESSO TABLET*/
+@media screen and (max-width: 768px) {
+    .acesso-content {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        height: 100%;
+    }
 
+    .acesso-headline {
+        grid-column: 1/3;
+        grid-row: 1/2;
+        border-right: .2px solid var(--stroke);
+    }
+
+    .card-1 {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    
+    .card-2 {
+        grid-row: 2/3;
+        grid-column: 2/3;
+    }
+    
+    .card-3 {
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+    
+    .card-4 {
+        grid-row: 3/4;
+        grid-column: 2/3;
+    }
+    
+    .card-5 {
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+    
+    .card-6 {
+        grid-row: 4/5;
+        grid-column: 2/3;
+    }
+    
+    .card-7 {
+        grid-row: 5/6;
+        grid-column: 1/2;
+    }
+    
+    .card-8 {
+        grid-row: 5/5;
+        grid-column: 2/3;
+    }
+    
+    .ec {
+        display: none;
+    }
+}
 
 
 /*ACESSO MOBILE*/
+@media screen and (max-width: 480px) {
+    .card {
+        align-items: flex-start;
+    }
+    
+    .card h4 {
+        max-width: 110%;
+    
+    }
+}
