--- a/Assets/css/pages/index/partials/mentor.css
+++ b/Assets/css/pages/index/partials/mentor.css
@@ -24,6 +24,7 @@ section#mentor {
     background-color: var(--bg-secodary);
     padding: 1.2rem;
     z-index: 10;
+    border: .1px solid var(--stroke);
 }
 
 .mentor-content .divisor .about h4 {
@@ -32,9 +33,9 @@ section#mentor {
 }
 
 .mentor-img {
-    width: 700px;;
+    width: 700px;
     position: absolute;
-    top: 10%;
+    top: 0;
     bottom: 0;
     left: 25%;
     right: 25%;
@@ -43,14 +44,107 @@ section#mentor {
 .mentor-name {
     font-family: var(--font-secondary);
     color: var(--text-light);
-    font-size: 80px;
+    font-size: var(--text-xl);
     width: 100%;
     text-align: center;
     padding: 1rem 40px;
     grid-row: 2;
 }
 
-/*MENTOR MOBILE*/
+.mentor-name-mobile {
+    display: none;
+}
 
+/*MENTOR DESKTOP HD*/
+@media (max-width:1440px) {
+    .mentor-img {
+        width: var(--img-w3);
+    }
+    
+    .mentor-img img {
+        width: 100%;
+        position: relative;
+        bottom: -120px;
+    }
+}
+
+@media (max-width:1300px) {
+    .mentor-img {
+        width: var(--img-w3);
+    }
+    
+    .mentor-img img {
+        bottom: -250px;
+    }
+}
+
+/*MENTOR TABLET*/
+@media (max-width:  768px) {
+    .mentor-content {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .mentor-content .divisor {
+        border: none;
+        grid-template-rows: 1fr;
+    }
+
+    .mentor-content .divisor .about {
+        grid-row: 1;
+        border: .1px solid var(--stroke);
+    }
+
+    .mentor-img {
+        width: 100%;;
+        position: inherit;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border: .1px solid var(--stroke);
+    }
+
+    .mentor-img img {
+        width: 90%;
+        bottom: -100px;
+    }
+
+    .mentor-name {
+        display: none;
+    }
+
+    .mentor-name-mobile {
+        font-family: var(--font-secondary);
+        color: var(--text-light);
+        font-size: var(--text-xl);
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+        margin-bottom: -220px;
+    }
+}
 
 /*MENTOR MOBILE*/
+@media  (max-width: 480px) {
+    .mentor-content {
+        grid-template-columns: 1fr;
+    }
+
+    .mentor-content .divisor .about h4 {
+        margin-bottom: 10px;
+    }
+
+    .mentor-img img {
+        bottom: -20px;
+    }
+
+    .mentor-name-mobile {
+        padding-top: 40px;
+        margin-bottom: -112px;
+    }
+}
