--- a/Assets/css/pages/index/partials/cta.css
+++ b/Assets/css/pages/index/partials/cta.css
@@ -1,6 +1,6 @@
 /*CTA DESKTOP*/
 section.cta {
-    background-image: url(/public/Background\ Turbo\ 2.0\ \(1\).png);
+    background-image: url(../../../../../public/Background\ Turbo\ 2.0\ \(1\).png);
     background-repeat: no-repeat;
     background-size: cover;
 }
