--- a/Assets/css/pages/index/partials/hero.css
+++ b/Assets/css/pages/index/partials/hero.css
@@ -1,7 +1,7 @@
 /* HERO DESKTOP */
 
 section.hero {
-    background-image: url(/public/image-bg-hero-01\ \(1\).png);
+    background-image: url(../../../../../public/image-bg-hero-01\ \(1\).png);
     background-size: cover;
     background-repeat: no-repeat;
 }
