Footer complete, hero update, slider update

--- a/Assets/css/pages/index/index.css
+++ b/Assets/css/pages/index/index.css
@@ -13,5 +13,7 @@
 @import url(./partials/dep.css);
 @import url(./partials/mentor.css);
 @import url(./partials/cta.css);
+@import url(./partials/parceiros.css);
 @import url(./partials/faq.css);
 @import url(./partials/footer.css);
+
