--- a/Assets/css/pages/index/partials/hero.css
+++ b/Assets/css/pages/index/partials/hero.css
@@ -102,7 +102,16 @@ video {
 }
 
 /* HERO MOBILE */
-@media screen  and (max-with:480px) {
-    
+@media screen  and (max-width: 480px) {
+    section.hero .col:first-child {
+        height: 50%;
+    }
+    section.hero .headline {
+        padding: 80px 20px 0 20px;
+        gap: 10px;
+    }
+    section.hero .main-col button.btn-s {
+        display: none;
+    }
 }
 
