--- a/Assets/css/pages/index/partials/footer.css
+++ b/Assets/css/pages/index/partials/footer.css
@@ -21,6 +21,11 @@ footer h4 {
     color: var(--text-light);
 }
 
+footer .main-col a {
+    text-decoration: none;
+    width: 100%;
+}
+
 footer .reflexao, footer .blog, footer .social, footer .contato, .cnpj {
     display: flex;
     flex-direction: column;
