--- a/Assets/css/pages/index/partials/marquee.css
+++ b/Assets/css/pages/index/partials/marquee.css
@@ -34,6 +34,7 @@
 
 .text-wrapper img {
     max-width: 150px;
+    max-height: 150px;
     border-radius: 150px;
 
     white-space: nowrap;
@@ -58,6 +59,7 @@
 
     .text-wrapper img {
         max-width: 120px;
+        max-height: 120px;
         border-radius: 100px;
         padding: 2.6rem;
     }
@@ -71,6 +73,7 @@
 
     .text-wrapper img {
         max-width: 100px;
+        max-height: 100px;
         border-radius: 100px;
     
         white-space: nowrap;
@@ -88,6 +91,7 @@
 
     .text-wrapper img {
         max-width: 70px;
+        max-height: 100px;
         border-radius: 70px;
     
         white-space: nowrap;
