--- a/Assets/css/pages/index/partials/dep.css
+++ b/Assets/css/pages/index/partials/dep.css
@@ -11,15 +11,28 @@ section#depoimentos {
     align-items: center;
     width: 100%;
     padding: 1rem var(--container-desktop);
+    gap: 2rem;
 }
 
 .arrow-right img {
     max-width: var(--text-lg);
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
+.arrow-right img:hover {
+    background-color: rgba(141, 144, 147, 0.074);
+    border-radius: 100%;
+}
+
+.arrow-right img#preview {
+    rotate: 180deg;
 }
 
 #depoimentos .slider {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 
@@ -66,6 +79,40 @@ section#depoimentos {
     font-size: var(--text-sm);
     line-height: 1.1;
     letter-spacing: normal;
+}
+
+container {
+  overflow: auto;
+  display: flex;
+  scroll-snap-type: x mandatory;
+}
+
+.box {
+  height: 200px;
+  width: 200px;
+  background: red;
+  margin-right: 5px;
+  flex-shrink: 0;
+  scroll-snap-align: start;
+}
+
+.dots {
+  display: flex;
+  justify-content: center;
+}
+
+.dot {
+  all: unset;
+  margin-right: 5px;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  background: gray;
+  margin-top: 10px;
+}
+
+.dot:focus {
+  outline: 1px solid blue;
 }
 
 /*DEPOIMENTOS DESKTOP HD*/
