1366 screen size update

--- a/Assets/css/global/variables.css
+++ b/Assets/css/global/variables.css
@@ -16,9 +16,11 @@
     --p: clamp(14px, 1vw, 20px);
     --text-sm: clamp(22px, 3vw, 36px);
     --text-md: clamp(28px, 3vw, 48px);
-    --text-lg: clamp(32px, 4vw, 50px);
-    --text-xl: clamp(50px, 5vw, 80px);
+    --text-lg: clamp(32px, 4vw, 45px);
+    --text-xl: clamp(45px, 5vw, 70px);
     --text-btn: clamp(16px, 3vw, 24px);
+
+    --text-xl-hd: clamp(45px, 4vw, 68px);
 
     /*Images-Width*/
     --img-w1: clamp(700px, 70vw, 1150px);
