--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /**
- * Theme Name:        TipsCode
+ * Theme Name:        TipsCode 2.0
  * Theme URI:         https://henriquesanti.pages.dev
  * Description:       Tema rápido e performático criado para a tipscode
  * Version:           1.0.0
