--- a/Assets/css/pages/index/partials/marquee.css
+++ b/Assets/css/pages/index/partials/marquee.css
@@ -33,8 +33,8 @@
 }
 
 .text-wrapper img {
-    max-width: 150px;
-    max-height: 150px;
+    width: 150px;
+    height: 150px;
     border-radius: 150px;
 
     white-space: nowrap;
@@ -72,8 +72,8 @@
     }
 
     .text-wrapper img {
-        max-width: 100px;
-        max-height: 100px;
+        width: 100px;
+        height: 100px;
         border-radius: 100px;
     
         white-space: nowrap;
@@ -90,8 +90,8 @@
     }
 
     .text-wrapper img {
-        max-width: 70px;
-        max-height: 100px;
+        width: 70px;
+        height: 100px;
         border-radius: 70px;
     
         white-space: nowrap;
