--- a/Assets/css/pages/index/partials/acesso.css
+++ b/Assets/css/pages/index/partials/acesso.css
@@ -105,6 +105,13 @@ section.acesso {
     grid-column: 5;
 }
 
+/*ACESSO DESKTOP HD*/
+@media screen and (max-width: 1366px) {
+    .card h4 {
+        font-size: var(--text-btn-hd);
+    }
+}
+
 
 /*ACESSO TABLET*/
 @media screen and (max-width: 768px) {
